--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="maneiras">
         <h3 class="centralizado">Formas de contribuir para a melhoria da educação</h3>
         <div class="coluna quatro centralizado">
-            <img class="icones" src="/img/investimento.png" alt="investimento">
+            <img class="icones" src="./img/investimento.png" alt="investimento">
             <h4>Investimento adequado</h4>
             <p>Alocar recursos financeiros adequados para o sistema educacional, incluindo infraestrutura, material didático, tecnologia e treinamento de professores.</p>
         </div>
